welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:4: error: type mismatch;
 found   : String("lookingFor")
 required: Int
			return "lookingFor"
                               ^indexOfValue:6: error: type mismatch;
 found   : String("-1")
 required: Int
		return "-1"
                       ^indexOfValue:2: error: type mismatch;
 found   : Unit
 required: Int
	for (i<-0 to nums.length-1){
              ^